# I-FENN-DeepONet-Multiphysics

./: README.md
Example_1_3D_Cube/1-Fully_Coupled_FEM_Deal.II_Solver/: CMakeLists.txt  build-program-deal.ii.sh  run_test.sh
Example_1_3D_Cube/1-Fully_Coupled_FEM_Deal.II_Solver/include/: body_functions.h  boundary_functions.h  gradient_postprocessor.h  helper_functions.h  main_postprocessor.h  point_history.h
Example_1_3D_Cube/1-Fully_Coupled_FEM_Deal.II_Solver/source/: program-007.cc
Example_1_3D_Cube/2-Processed_Generated_Data/: README.md
Example_1_3D_Cube/3-DL_Training/: Module_DL_Helper.py  training_code.py
Example_1_3D_Cube/4-IFENN_Framework/DL_Python_Layer/: Module_DL_Helper_036.py  Module_Solution_Loader_Helper_006.py  python_server.py
Example_1_3D_Cube/4-IFENN_Framework/FEM_CPP_Layer/: CMakeLists.txt  build-program-deal.ii.sh  lc911_run.sh
Example_2_3D_Tube/1-Fully_Coupled_FEM_Deal.II_Solver/: CMakeLists.txt  build-program-deal.ii.sh  run_test.sh
Example_2_3D_Tube/1-Fully_Coupled_FEM_Deal.II_Solver/include/: body_functions.h  boundary_functions.h  mesh_generator.h  point_history.h  stress_postprocessor.h
Example_2_3D_Tube/1-Fully_Coupled_FEM_Deal.II_Solver/input_deal.ii/: Model010_Tube_flux_gen_matrix_v001.npy
Example_2_3D_Tube/1-Fully_Coupled_FEM_Deal.II_Solver/source/: program-010.cc
Example_2_3D_Tube/2-Processed_Generated_Data/: README.md
Example_2_3D_Tube/3-DL_Training/: Module_DL_Helper_Tube_006.py  training_code.py
Example_2_3D_Tube/4-IFENN_Framework/DL_Python_Layer/: Module_DL_Helper_Tube_008.py  Module_Solution_Loader_Helper_Tube_002.py  python_server.py
Example_2_3D_Tube/4-IFENN_Framework/FEM_CPP_Layer/: CMakeLists.txt  build-program-deal.ii.sh  clear-mem.sh  lc968_run.sh
Example_3_2D_Excavation/1-Fully_Coupled_FEM_Deal.II_Solver/: CMakeLists.txt  run_test.sh
Example_3_2D_Excavation/1-Fully_Coupled_FEM_Deal.II_Solver/include/: boundary_functions.h  component_postprocessor.h  helper_functions.h  io_functions.h  mesh_generator.h  point_history.h  strain_postprocessor.h  stress_calculator.h
Example_3_2D_Excavation/1-Fully_Coupled_FEM_Deal.II_Solver/input_deal.ii/: generated_excav_flux_data_v002.npy
Example_3_2D_Excavation/1-Fully_Coupled_FEM_Deal.II_Solver/meshes/: poro_grid-2D-001_009.msh
Example_3_2D_Excavation/1-Fully_Coupled_FEM_Deal.II_Solver/source/: helper_functions.cc  program-PE001.cc
Example_3_2D_Excavation/2-Processed_Generated_Data/: README.md
Example_3_2D_Excavation/3-DL_Training/: Module_DL_Helper_Excav_004.py  training_code.py
(+26 files in other folders)
